Switchover to RSA from DSA

--- a/SparkleDotNET/SparkleDotNET.csproj
+++ b/SparkleDotNET/SparkleDotNET.csproj
@@ -114,6 +114,7 @@
     <Compile Include="SUConstants.cs" />
     <Compile Include="SUAppcast.cs" />
     <Compile Include="SUDSAVerifier.cs" />
+    <Compile Include="SURSAVerifier.cs" />
     <Compile Include="SUHost.cs" />
     <Compile Include="Installation\SUInstaller.cs" />
     <Compile Include="SUSystemProfiler.cs" />
@@ -228,7 +229,7 @@
     <Resource Include="License.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
