--- a/SparkleDotNET/SparkleDotNET.csproj
+++ b/SparkleDotNET/SparkleDotNET.csproj
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="KNFoundation">
-      <HintPath>..\KNFoundation.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -226,6 +223,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="License.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\KNFoundation\KNFoundation\KNFoundation.csproj">
+      <Project>{e8de5b2b-1da4-42e4-8621-2c48c8cbd750}</Project>
+      <Name>KNFoundation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
